[package]
name = "cplex_dynamic"
version = "0.1.0"
edition = "2021"
exclude = ["target/*", ".gitignore", ".cargo/*", "Cargo.lock"]
license = "MIT OR Apache-2.0"


# [lib]
# name = "cplex_dynamic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
libc = "0.2.0"
const-cstr = "0.3.0"
lazy_static = "1.4.0"
glob = "0.3.0"
# libloading = "0.7"
